hphp/test/slow/expression_trees/is.php.expectf
Fatal error: `is` is not supported in expression trees. in %s/is.php on line 8
